@@ -5,13 +5,16 @@ import de.pocketcloud.cloudbridge.network.packet.impl.normal.*;
 import de.pocketcloud.cloudbridge.network.packet.impl.request.*;
 import de.pocketcloud.cloudbridge.network.packet.impl.response.*;
 import dev.waterdog.waterdogpe.logger.MainLogger;
+import lombok.Getter;
 
 import java.util.HashMap;
 
 public class PacketPool {
 
+    @Getter
     private static PacketPool instance;
 
+    @Getter
     private final HashMap<String, Class<? extends CloudPacket>> packets = new HashMap<>();
 
     public PacketPool() {
@@ -56,18 +59,10 @@ public class PacketPool {
         if (packetClass == null) return null;
         CloudPacket packet = null;
         try {
-            packet = packetClass.newInstance();
+            packet = packetClass.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             MainLogger.getLogger().throwing(e);
         }
         return packet;
-    }
-
-    public static PacketPool getInstance() {
-        return instance;
-    }
-
-    public HashMap<String, Class<? extends CloudPacket>> getPackets() {
-        return packets;
     }
 }
